--- a/EXP 2 Vallu/Vallabha_resto.html
+++ b/EXP 2 Vallu/Vallabha_resto.html
@@ -79,7 +79,14 @@
 <a href="C:\Users\eashw\Downloads\web_exp2\EXP 2 Vallu\html_form.html">Apply Form Here</a><br>
 <div class="container">
     <h1>My location</h1>
-    <iframe src="https://goo.gl/maps/1hqyWf96X2pLGc5WA" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe
+src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15669.
+933616645829!2d76.74519445!3d10.926810099999999!2m3!1f0!2f0!3f0!3m2
+!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1641210335827!5m2!1sen!2sin"
+width="600" height="450" style="border:0;" allowfullscreen=""
+loading="lazy">
+
+</iframe>
 
 </div>
   
